--- a/Vocable/Supporting Files/fr.lproj/Localizable.strings
+++ b/Vocable/Supporting Files/fr.lproj/Localizable.strings
@@ -115,8 +115,14 @@
 /* Listen mode error state message for when Apple's speech to text service is unavailable */
 "listening_mode.empty_state.speech_unavailable.message" = "Les services vocaux nécessitent l'activation de l'une des fonctionnalités suivantes sur votre appareil : Siri ou Dictée. Veuillez vérifier les paramètres de votre appareil et activer Siri ou Dictée.";
 
+/* Listen mode error state message for when the vocable API fails */
+"listening_mode.empty_state.vocableAPIFailure.message" = "Veuillez vérifier votre connexion internet et réessayer plus tard.";
+
 /* Listen mode error state title for when Apple's speech to text service is unavailable */
 "listening_mode.empty_state.speech_unavailable.title" = "Services vocaux indisponibles";
+
+/* Listen mode error state message for when the vocable API fails */
+"listening_mode.empty_state.vocableAPIFailure.title" = "Échec du réseau";
 
 /* Listening mode empty state message for when microphone permissions are required, but listening mode is unsupported */
 "listening_mode.empty_state.unsupported.message" = "Ce %1$@ sur %2$@ %3$@ ne prend pas en charge le mode d'écoute.\n\nLe mode d'écoute n'est actuellement disponible qu'en anglais et nécessite l'activation de %5$@.";
